Added files from desktop
added files such as start.html, start.css, start.js Created start page

--- a/style.css
+++ b/style.css
@@ -2,8 +2,12 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    color: white; 
   }
+
+
+/* Main Page--------------------------------------------------------- */
 canvas {
   display: block;
 }
