--- a/start.css
+++ b/start.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: white; 
   }
 /* Start Page--------------------------------------------------------- */
 
@@ -33,6 +32,7 @@
 }
 /* style the title text */
 .start-title p {
+  color: white; 
   font-size: 10em;
   font-family: "Modak", serif;
   -webkit-text-stroke: 4px black;
@@ -44,7 +44,6 @@
   flex-direction: column;
   width: 20em;
   gap: 1em;
-  
 }
 /* style the three buttons */
 .start-buttons button{
@@ -59,6 +58,7 @@
   text-shadow: 3px 2px black;
   cursor: pointer;
   transition: .1s;
+  color: white; 
 }
 .start-btn{
   width: 9.1em;
@@ -100,7 +100,7 @@
   padding: .3em .5em;
   font-size: 1.4em;
   background-color: rgb(247, 58, 58);
-  color: black;
+  color: white;
   cursor: pointer;
   border: 2px solid rgb(0, 0, 0);
   box-shadow: 0px 2px 5px 1px rgb(148, 148, 148);
@@ -269,6 +269,7 @@
   border-radius: 5px;
   cursor: pointer;
   transition: .1s;
+  color: white; 
 }
 /* hover effect to buttons in options menu popup */
 .bottom-options-section button:hover{
@@ -333,6 +334,7 @@
 /* When screen size is less than 985 width, change these */
 @media screen and (max-width: 985px) {
   .start-title p {
+    color: white; 
     font-size: 8em;
     font-family: "Modak", serif;
     -webkit-text-stroke: 4px black;
@@ -359,6 +361,7 @@
     text-shadow: 3px 2px black;
     cursor: pointer;
     transition: .1s;
+    color: white; 
   }
   .start-btn{
     width: 10em;
@@ -383,6 +386,7 @@
 
 
   .start-title p {
+    color: white; 
     font-size: 6em;
     font-family: "Modak", serif;
     -webkit-text-stroke: 4px black;
@@ -409,6 +413,7 @@
     text-shadow: 3px 2px black;
     cursor: pointer;
     transition: .1s;
+    color: white; 
   }
   .start-btn{
     width: 11.1em;
@@ -434,6 +439,7 @@
 
 
   .start-title p {
+    color: white; 
     font-size: 4em;
     font-family: "Modak", serif;
     -webkit-text-stroke: 4px black;
@@ -461,6 +467,7 @@
     text-shadow: 3px 2px black;
     cursor: pointer;
     transition: .1s;
+    color: white; 
   }
   .start-btn{
     width: 14.2em;
@@ -584,3 +591,102 @@
     
   }
 }
+
+/* about button */
+.about-button {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  width: 50px;
+  height: 50px;
+  background-color: rgb(247, 58, 58);  
+  border: 2px solid black;
+  border-radius: 50%;
+  padding: 0;
+  box-shadow: 0px 5px 5px 1px black;
+  font-family: "Modak", serif;
+  -webkit-text-stroke: 1px black;
+  text-shadow: 3px 2px black;
+  cursor: pointer;
+  color: white;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+.top-about-section{
+  display: flex;
+  justify-content: center;
+}
+
+.popup-content {
+    background: white;
+    color: black;
+    fill:rgb(247, 58, 58);
+    border-radius: 8px;
+    width: 34em;
+    text-align: center;
+    position: relative;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  background: rgb(247, 58, 58);
+  color: white;
+  cursor: pointer;
+  border: 2px solid black;
+  box-shadow: 0px 2px 5px 1px rgb(148, 148, 148);
+  border-radius: 50%;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: .1s;
+}
+
+.tab-container {
+  color: black;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.tab {
+  color: black !important;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-bottom: 2px solid transparent;
+}
+
+.tab.active {
+  border-bottom: 2px solid rgb(247, 58, 58);
+  font-weight: bold;
+}
+
+.tab-content {
+  display: none;
+}
+
+.tab-content.active {
+  display: block;
+}
+
+    
