--- a/start.css
+++ b/start.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: white; 
   }
 /* Start Page--------------------------------------------------------- */
 
@@ -18,7 +17,7 @@
   flex-direction: column;
   overflow: hidden;
   gap: 2em;
- 
+  color: white; 
 }
 /* container to center the text and buttons within the container */
 .start-page-container{
@@ -28,8 +27,6 @@
   align-items: center;
   height: 30em;
   width: 80%;
-  
-  
 }
 /* style the title text */
 .start-title p {
@@ -59,6 +56,7 @@
   text-shadow: 3px 2px black;
   cursor: pointer;
   transition: .1s;
+  color: white; 
 }
 .start-btn{
   width: 9.1em;
@@ -88,8 +86,7 @@
   background-color:white;
   border: 4px solid rgb(0, 0, 0);
   border-radius: 15px;
-  
-  
+  color: white;
 }
 /* Styling for the exit button */
 .exit-btn{
@@ -107,6 +104,7 @@
   border-radius: 50em;
   font-family: Arial, Helvetica, sans-serif;
   transition: .1s;
+  color: white; 
 }
 .exit-btn:hover{
   background-color: rgb(242, 95, 95);
@@ -269,6 +267,7 @@
   border-radius: 5px;
   cursor: pointer;
   transition: .1s;
+  color: white; 
 }
 /* hover effect to buttons in options menu popup */
 .bottom-options-section button:hover{
@@ -583,4 +582,101 @@
     display: none;
     
   }
+}
+
+/* about button */
+.about-button {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  width: 50px;
+  height: 50px;
+  background-color: rgb(247, 58, 58);  
+  border: 2px solid black;
+  border-radius: 50%;
+  padding: 0;
+  box-shadow: 0px 5px 5px 1px black;
+  font-family: "Modak", serif;
+  -webkit-text-stroke: 1px black;
+  text-shadow: 3px 2px black;
+  cursor: pointer;
+  color: white;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+.top-about-section{
+  display: flex;
+  justify-content: center;
+}
+
+.popup-content {
+    background: white;
+    color: black;
+    fill:rgb(247, 58, 58);
+    border-radius: 8px;
+    width: 34em;
+    text-align: center;
+    position: relative;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  background: rgb(247, 58, 58);
+  color: white;
+  cursor: pointer;
+  border: 2px solid black;
+  box-shadow: 0px 2px 5px 1px rgb(148, 148, 148);
+  border-radius: 50%;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: .1s;
+}
+
+.tab-container {
+  color: black;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.tab {
+  color: black !important;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-bottom: 2px solid transparent;
+}
+
+.tab.active {
+  border-bottom: 2px solid rgb(247, 58, 58);
+  font-weight: bold;
+}
+
+.tab-content {
+  display: none;
+}
+
+.tab-content.active {
+  display: block;
 }
