Reorganized Repo. Everything seems to be working.

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GateKeeper - Start</title>
-    <link rel="stylesheet" href="start.css">
+    <link rel="stylesheet" href="../static/start.css">
 
     
     <!-- Link the google fonts -->
@@ -25,9 +25,9 @@
             </div>
             <!-- The 3 buttons that control start, options, and level select -->
             <div class="start-buttons">
-                <a href="./main/index.html"><button class="start-btn">Start</button></a>
+                <a href="play.html"><button class="start-btn">Start</button></a>
                 <button class="options-btn">Options</button>
-                <a href="./level_select/level_select.html"><button class="start-btn">Level Select</button></a>
+                <a href="level_select.html"><button class="start-btn">Level Select</button></a>
             </div>
             
 
@@ -148,6 +148,6 @@
 
     
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="start.js"></script>
+    <script src="../static/start.js"></script>
 </body>
 </html>
