--- a/main/templates/level_select.html
+++ b/main/templates/level_select.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GateKeeper - Level Select</title>
-    <link rel="stylesheet" href="level_select.css">
+    <link rel="stylesheet" href="../static/level_select.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,14 +21,13 @@
         <div class="level-buttons" id="level-list">
            
         </div>
-        <a href="../index.html"><button class="back-btn">Back</button></a>
+        <a href="index.html"><button class="back-btn">Back</button></a>
     </section>
 
-    <script src="level_select.js"></script>
     <script>
         async function loadLevels() {
             try {
-                const response = await fetch('levels.json');
+                const response = await fetch('../static/levels.json');
                 if (!response.ok) {
                     throw new Error('Failed to load levels.json');
                 }
@@ -50,7 +49,7 @@
                         //store gates from selected level in local storage. Will allow users to start from the level they ended on.
                         localStorage.setItem('initialize_objects', JSON.stringify(level));
                         //redirect to the main page
-                        window.location.href = '../main/index.html';
+                        window.location.href = 'index.html';
 
                         console.log(`Selected level: ${level.Name}`);
                         console.log('Object:', JSON.stringify(level));
