--- a/main/templates/play.html
+++ b/main/templates/play.html
@@ -3,7 +3,7 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../static/style.css">
     <title>GateKeeper - Main</title>
     <meta charset="utf-8" />
 
@@ -68,6 +68,6 @@
 
 
     </main>
-    <script src="sketch.js"></script>
+    <script src="../static/sketch.js"></script>
   </body>
 </html>
