Fixed reference to play.html

--- a/main/templates/level_select.html
+++ b/main/templates/level_select.html
@@ -49,7 +49,7 @@
                         //store gates from selected level in local storage. Will allow users to start from the level they ended on.
                         localStorage.setItem('initialize_objects', JSON.stringify(level));
                         //redirect to the main page
-                        window.location.href = 'index.html';
+                        window.location.href = 'play.html';
 
                         console.log(`Selected level: ${level.Name}`);
                         console.log('Object:', JSON.stringify(level));
