--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -25,7 +25,7 @@
             </div>
             <!-- The 3 buttons that control start, options, and level select -->
             <div class="start-buttons">
-                <a href="play.html"><button class="start-btn">Start</button></a>
+                <a href="play.html" id="GoToPlayPage"><button class="start-btn">Start</button></a>
                 <button class="options-btn">Options</button>
                 <a href="level_select.html"><button class="start-btn">Level Select</button></a>
             </div>
@@ -141,6 +141,12 @@
                 
                 document.querySelector(`[onclick="openTab('${tabId}')"]`).classList.add('active');
                 document.getElementById(tabId).classList.add('active');
+            }
+        </script>
+        <script>
+            const storedObjects = localStorage.getItem('initialize_objects');
+            if (!storedObjects) {
+                document.getElementById("GoToPlayPage").href = "level_select.html"
             }
         </script>
         </section>
