Paths to go to "/" not Index.html

--- a/main/templates/play.html
+++ b/main/templates/play.html
@@ -47,7 +47,7 @@
   
       <!-- Bottom Section with Back Button -->
       <div class="bottom-options-section">
-          <button id="back-to-main">Home</button>
+          <a href="/"><button id="back-to-main">Home</button></a>
       </div>
   </div>
     <main>
