--- a/main/templates/level_select.html
+++ b/main/templates/level_select.html
@@ -21,7 +21,7 @@
         <div class="level-buttons" id="level-list">
            
         </div>
-        <a href="index.html"><button class="back-btn">Back</button></a>
+        <a href="/"><button class="back-btn">Back</button></a>
     </section>
 
     <script>
