Created Support Popup when Support button is clicked

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -86,7 +86,20 @@
                 <button><i class="fa-solid fa-volume-xmark" style="color: #ffffff;"></i></button>
             </div>
         </div>
-        
+
+
+        <!-- Support Popup when clicked in the options menu popup -->
+        <div id="supportPopup" style="display: none;">
+            <div class="exit-button">
+                <button class="support-exit-btn"><i class="fa-solid fa-xmark"></i></button>
+            </div>
+            <div class="top-support-section">
+                <div class="support-title">
+                    <p>Help is on it's way!</p>
+                </div>
+            </div>
+        </div>
+
     </section>
     <section>
         <!-- This is the top right info/about button --> 
@@ -121,7 +134,7 @@
                 </div> 
             </div>
         </div>
-        
+    </section>
         <script>
             // pop up
             function togglePopup() {
@@ -149,7 +162,7 @@
                 document.getElementById("GoToPlayPage").href = "level_select.html"
             }
         </script>
-        </section>
+        
 
 
     
