--- a/main/static/start.css
+++ b/main/static/start.css
@@ -318,6 +318,71 @@
 
 
 
+/* Support Popup Styling and Positioning */
+#supportPopup{
+  height: 44em;
+  width: 40em;
+  background-color: white;
+  position: absolute;
+  display: none;
+  border-radius: 25px;
+  border: 4px solid black;
+}
+.support-exit-btn{
+  display: inline;
+  position: absolute;
+  right: 1%;
+  margin-top: .2em;
+  padding: .3em .5em;
+  font-size: 1.4em;
+  background-color: rgb(247, 58, 58);
+  color: black;
+  cursor: pointer;
+  border: 2px solid rgb(0, 0, 0);
+  box-shadow: 0px 2px 5px 1px rgb(148, 148, 148);
+  border-radius: 50em;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: .1s;
+  color: white; 
+}
+.support-exit-btn:hover{
+  background-color: rgb(242, 95, 95);
+}
+.support-exit-btn:active{
+  transform: scale(.8);
+}
+/* the icon for the exit btn */
+.fa-xmark{
+  text-shadow: 0px 3px black;
+}
+.top-support-section{
+  display: flex;
+  justify-content: center;
+}
+.support-title{
+  background-color: rgb(247, 58, 58);
+  width: 60%;
+  text-align: center;
+  box-shadow: 0px 3px 6px 1px rgb(104, 104, 104);
+  border: 2px solid black;
+  border-radius: 5px;
+  border-top: none;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+}
+.support-title p{
+  color: white;
+  font-size: 2.2em;
+  font-family: "Modak", serif;
+  -webkit-text-stroke: 1px black;
+  text-shadow: 3px 2px black;
+}
+
+
+
+
+
+
 
 
 /* Start Media Queries-------------------------------------------------------------------------- */
