Added line 104 to direct to index.html

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -100,7 +100,8 @@
                     <p>Help is on it's way!</p>
                 </div>
                 <!-- the form for the support popup and action is sent to email after submission -->
-                <form id="supportForm" action="https://formsubmit.co/mariostanic367@gmail.com" method="post">
+                <form id="supportForm" action="https://formsubmit.co/g6830926@gmail.com" method="post">
+                    <input type="hidden" name="_url" value="https://jonathan-lanham.github.io/SoftwareEngGroupA/main/templates/index.html">
                     <!-- subject section -->
                     <div class="support-subject">
                         <label class="subject-label">Subject</label><br>
