Created Separate Sound_effect.js file to work on all pages.

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -175,6 +175,10 @@
             </div>
         </div>
     </section>
+
+
+
+
         <script>
             // pop up
             function togglePopup() {
@@ -208,5 +212,6 @@
     
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="../static/start.js"></script>
+    <script src="../static/sound_effect.js"></script>
 </body>
 </html>
