--- a/main/templates/play.html
+++ b/main/templates/play.html
@@ -69,5 +69,6 @@
 
     </main>
     <script src="../static/sketch.js"></script>
+    <script src="../static/sound_effect.js"></script>
   </body>
 </html>
