--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -186,6 +186,169 @@
                             </ol>
                             <br><br></p>
                     </div>
+                    <div id="truth-tables" class="tab-content">
+                        <h3>AND:</h3>
+                        <table>
+	                        <tr>
+		                        <th>x</th>
+		                        <th>y</th>
+		                        <th>x AND y</th>
+	                        </tr>
+	                        <tr>
+		                        <td>TRUE</td>
+		                        <td>TRUE</td>
+		                        <td>TRUE</td>
+	                        </tr>
+	                        <tr>
+		                        <td>TRUE</td>
+		                        <td>FALSE</td>
+		                        <td>FALSE</td>
+	                        </tr>
+	                        <tr>
+		                        <td>FALSE</td>
+		                        <td>TRUE</td>
+		                        <td>FALSE</td>
+	                        </tr>
+	                        <tr>
+		                        <td>FALSE</td>
+		                        <td>FALSE</td>
+		                        <td>FALSE</td>
+	                        </tr>
+                        </table>
+
+                        <h3>OR:</h3>
+                        <table>
+	                        <tr>
+		                        <th>x</th>
+		                        <th>y</th>
+		                        <th>x OR y</th>
+	                        </tr>
+	                        <tr>
+		                        <td>TRUE</td>
+		                        <td>TRUE</td>
+		                        <td>TRUE</td>
+	                        </tr>
+	                        <tr>
+		                        <td>TRUE</td>
+		                        <td>FALSE</td>
+		                        <td>TRUE</td>
+	                        </tr>
+	                        <tr>
+		                        <td>FALSE</td>
+		                        <td>TRUE</td>
+		                        <td>TRUE</td>
+	                        </tr>
+	                        <tr>
+		                        <td>FALSE</td>
+		                        <td>FALSE</td>
+		                        <td>FALSE</td>
+	                        </tr>
+                        </table>
+
+                        <h3>NOT:</h3>
+                        <table>
+	                        <tr>
+		                        <th>x</th>
+		                        <th>NOT x</th>
+	                        </tr>
+	                        <tr>
+		                        <td>TRUE</td>
+		                        <td>FALSE</td>
+	                        </tr>
+	                        <tr>
+		                        <td>FALSE</td>
+		                        <td>TRUE</td>
+	                        </tr>
+                        </table>
+
+                        <h3>XOR:</h3>
+                        <table>
+	                        <tr>
+		                        <th>x</th>
+		                        <th>y</th>
+		                        <th>x XOR y</th>
+	                        </tr>
+	                        <tr>
+		                        <td>TRUE</td>
+		                        <td>TRUE</td>
+		                        <td>FALSE</td>
+	                        </tr>
+	                        <tr>
+		                        <td>TRUE</td>
+		                        <td>FALSE</td>
+		                        <td>TRUE</td>
+	                        </tr>
+	                        <tr>
+		                        <td>FALSE</td>
+		                        <td>TRUE</td>
+		                        <td>TRUE</td>
+	                        </tr>
+	                        <tr>
+		                        <td>FALSE</td>
+		                        <td>FALSE</td>
+		                        <td>FALSE</td>
+	                        </tr>
+                        </table>
+
+                        <h3>NOR:</h3>
+                            <table>
+                            	<tr>
+	                            	<th>x</th>
+	                            	<th>y</th>
+                            		<th>x NOR y</th>
+                            	</tr>
+                            	<tr>
+                            		<td>TRUE</td>
+                               		<td>TRUE</td>
+	                            	<td>FALSE</td>
+	                            </tr>
+	                            <tr>
+	                            	<td>TRUE</td>
+	                            	<td>FALSE</td>
+	                            	<td>FALSE</td>
+                            	</tr>
+                            	<tr>
+                            		<td>FALSE</td>
+                            		<td>TRUE</td>
+                            		<td>FALSE</td>
+                            	</tr>
+                            	<tr>
+                            		<td>FALSE</td>
+                            		<td>FALSE</td>
+                            		<td>TRUE</td>
+                            	</tr>
+                            </table>
+
+                            <h3>NAND:</h3>
+                            <table>
+                            	<tr>
+                            		<th>x</th>
+                            		<th>y</th>
+                            		<th>x NAND y</th>
+	                            </tr>
+                            	<tr>
+	                            	<td>TRUE</td>
+	                            	<td>TRUE</td>
+	                            	<td>FALSE</td>
+                            	</tr>
+                            	<tr>
+                            		<td>TRUE</td>
+                            		<td>FALSE</td>
+                            		<td>TRUE</td>
+                            	</tr>
+                            	<tr>
+                            		<td>FALSE</td>
+	                            	<td>TRUE</td>
+	                            	<td>TRUE</td>
+	                            </tr>
+	                            <tr>
+	                            	<td>FALSE</td>
+	                            	<td>FALSE</td>
+	                            	<td>TRUE</td>
+                            	</tr>
+                            </table>
+
+                    </div>
                 </div> 
             </div>
         </div>
