--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -74,7 +74,7 @@
                     <button class="language-btn">Language</button>
                     <button class="support-btn">Support</button>
                     <button class="credits-btn">Credits</button>
-                    <button class="terms-btn">Terms & Privacy</button>
+                    <button class="terms-btn"><a class="terms-btn" href="../templates/terms.html">Terms & Privacy</a></button>
 
                 </div>
             </div>
