--- a/main/templates/play.html
+++ b/main/templates/play.html
@@ -68,7 +68,14 @@
 
 
     </main>
-    <script src="../static/sketch.js"></script>
+    <script src="../static/spatialHash.js"></script>
+    
+    <script src="../static/NodeClass.js"></script>
+
+    <script src="../static/drawGates.js"></script>
+    
+    
+    <script src="../static/GateKeeperObjects.js"></script>
     <script src="../static/sound_effect.js"></script>
   </body>
 </html>
