Fixed options menu not showing when gear is clicked

--- a/main/templates/play.html
+++ b/main/templates/play.html
@@ -77,5 +77,6 @@
     
     <script src="../static/GateKeeperObjects.js"></script>
     <script src="../static/sound_effect.js"></script>
+    <script src="../static/options.js"></script>
   </body>
 </html>
