--- a/main/templates/play.html
+++ b/main/templates/play.html
@@ -55,10 +55,14 @@
 
 
       <!-- Added background to canvas -->
-      <section id="level-background">
+      <section id="">
         <h1 id="Level-Name"></h1>
-
+        
       </section>
+
+      <div class="description-border">
+        <p id="Description"></p>
+      </div>
       
 
 
