--- a/main/static/style.css
+++ b/main/static/style.css
@@ -22,9 +22,26 @@ h1 {
   font-family: "Modak", serif;
   -webkit-text-stroke: 4px black;
   text-shadow: 3px 2px black;
+  display: flex;
 }
+p {
+  font-size: 1.5em;
+  font-family: "Modak", serif;
+  -webkit-text-stroke: 1px black;
+  display: flex;
+}
+
+.description-border {
+  width: 320px;
+  height: 50px;
+  padding: 10px;
+  border: 2px solid black;
+  margin: 0;
+}
+
 canvas {
-  display: block;
+  display: flex;
+  flex-direction: row; 
 }
 
 /* Options Button (Top Right) */
