Finished Credits popup

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bangers&family=Belanosima:wght@400;600;700&family=Modak&family=Rampart+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- Link the font icons from font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -138,6 +141,34 @@
                     </div>
                 </form>
             </div>
+        </div>
+        <!-- credits Popup when clicked in the options menu popup -->
+        <div id="creditsPopup" style="display: none;">
+            <!-- Support Popup Exit Button -->
+            <div class="exit-button">
+                <button class="credits-exit-btn"><i class="fa-solid fa-xmark"></i></button>
+            </div>
+             <!-- Credits title -->
+             <div class="top-credits-section">
+                <div class="credits-title">
+                    <p>Credits</p>
+                </div>
+             </div>
+             <div class="credits-container">
+                <div class="credits-content">
+                    <p><span class="credits-dev">Front-End Developer</span>Caitlyn Hartmann</p>
+                    <p><span class="credits-dev">Front-End Developer</span> Mario Stanic</p>
+                    <p><span class="credits-dev">Front-End Developer</span> Jeffrey Felger</p>
+                    <p><span class="credits-dev">Front-End Developer</span> Madelyn Washer</p>
+                    <hr class="credits-hr">
+                    <p><span class="credits-dev">Back-End Developer</span> Andrew Cash</p>
+                    <p><span class="credits-dev">Back-End Developer</span> Isha Gupta</p>
+                    <p><span class="credits-dev">Back-End Developer</span> Sam Markus</p>
+                    <p><span class="credits-dev">Back-End Developer</span> Jonathan Lanham</p>
+                    <p><span class="credits-dev">Back-End Developer</span> Vasu Ravindra Rabadia</p>
+                    
+                </div>
+             </div>
         </div>
 
     </section>
