--- a/main/static/start.css
+++ b/main/static/start.css
@@ -465,7 +465,94 @@
 }
 
 
+/* Start credits popup */
 
+/* Credits Popup Styling and Positioning */
+#creditsPopup{
+  height: 44em;
+  width: 55em;
+  background-color: #2b71f3;
+  position: absolute;
+  display: none;
+  border-radius: 25px;
+  border: 4px solid black;
+}
+.credits-exit-btn{
+  display: inline;
+  position: absolute;
+  right: 1%;
+  margin-top: .2em;
+  padding: .3em .5em;
+  font-size: 1.4em;
+  background-color: rgb(247, 58, 58);
+  color: black;
+  cursor: pointer;
+  border: 2px solid rgb(0, 0, 0);
+  box-shadow: 0px 2px 5px 1px rgb(37, 37, 37);
+  border-radius: 50em;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: .1s;
+  color: white; 
+}
+.credits-exit-btn:hover{
+  background-color: rgb(242, 95, 95);
+}
+.credits-exit-btn:active{
+  transform: scale(.8);
+}
+.top-credits-section{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1.8em;
+}
+.credits-title{
+  background-color: rgb(247, 58, 58);
+  width: 52%;
+  text-align: center;
+  box-shadow: 0px 3px 6px 1px rgb(37, 37, 37);
+  border: 2px solid black;
+  border-radius: 5px;
+  border-top: none;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  margin: 0 auto;
+}
+.credits-title p{
+  color: white;
+  font-size: 2.2em;
+  font-family: "Modak", serif;
+  -webkit-text-stroke: 1px black;
+  text-shadow: 3px 2px black;
+
+}
+.credits-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 92%;
+}
+.credits-content{
+ 
+  width: 100%;
+}
+.credits-content p{
+  color: white;
+  font-size: 1.9em;
+  font-family: "Roboto", sans-serif;
+  text-shadow: 3px 3px black;
+  padding: .2em;
+  margin: .5em;
+  padding-left: 6.5em;
+}
+.credits-dev{
+  font-size: .7em;
+  padding-right: 1em;
+}
+.credits-hr{
+  width: 100%;
+}
 
 
 
