Added new Game member variable, "levelCompleted". New options for popup on completion of level, "Home" button and "View Level" button.

--- a/main/templates/play.html
+++ b/main/templates/play.html
@@ -61,6 +61,8 @@
   
         <!-- Next Level Button -->
         <button class="win-button" onclick="loadNextLevel()">Next Level</button>
+        <button class="win-button" onclick="closePopupWin()">Stay here</button>
+        <button class="win-button" onclick="window.location.href='./index.html'">Bring Me Home</button>
       </div>
     </div>
   </section>
