Gate Pickup Sound

--- a/main/templates/play.html
+++ b/main/templates/play.html
@@ -90,7 +90,7 @@
 
     <script src="../static/drawGates.js"></script>
     
-    
+    <script src="../static/GameSounds.js"></script>
     <script src="../static/GateKeeperObjects.js"></script>
     <script src="../static/sound_effect.js"></script>
     <script src="../static/options.js"></script>
