--- a/main/templates/play.html
+++ b/main/templates/play.html
@@ -1,4 +1,3 @@
-play.html
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -72,6 +71,8 @@ play.html
   <div id="gateInfoPanel" class="side-panel">
     <button id="togglePanelBtn">☰</button>
     <div id="gateInfoContent" class="panel-content">
+      <h3>Level Instructions</h3>
+      <p id="levelDesc" style="padding: 0 22%;"></p>
       <h3>Gate Descriptions</h3>
       <ul id="gateList"></ul>
     </div>
@@ -93,7 +94,7 @@ play.html
       </section>
 
       <div class="description-border">
-        <p id="Description"></p>
+        <p id="Description" style="visibility: hidden;"></p>
       </div>
       
 
