Terms button bug fix

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -75,7 +75,7 @@
                     <button class="language-btn">Language</button>
                     <button class="support-btn">Support</button>
                     <button class="credits-btn">Credits</button>
-                    <button class="terms-btn"><a class="terms-btn" href="../templates/terms.html">Terms & Privacy</a></button>
+                    <a class="terms-btn" href="../templates/terms.html"><button class="terms-btn">Terms & Privacy</button></a>
 
                 </div>
             </div>
