--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -76,7 +76,9 @@
                     <button class="support-btn">Support</button>
                     <button class="credits-btn">Credits</button>
                     <a class="terms-btn" href="../templates/terms.html"><button class="terms-btn">Terms & Privacy</button></a>
-
+                    <div class="language-content">
+            
+                    </div>
                 </div>
             </div>
         </div>
@@ -168,6 +170,7 @@
                 </div>
              </div>
         </div>
+        
 
     </section>
     <section>
