--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -76,9 +76,15 @@
                     <button class="support-btn">Support</button>
                     <button class="credits-btn">Credits</button>
                     <a class="terms-btn" href="../templates/terms.html"><button class="terms-btn">Terms & Privacy</button></a>
-                    <div class="language-content">
-            
+                </div>
+                <div class="language-content" style="display: none;">
+                    <div class="language-content-div">
+                        <img class="english-icon" src="../static/images/united-kingdom.png">
+                        <img class="spanish-icon" src="../static/images/spanish.png">
+                        <img class="german-icon" src="../static/images/german.png">
+                        <img class="french-icon" src="../static/images/french.png">
                     </div>
+                    
                 </div>
             </div>
         </div>
